Java transformations working