@@ -1,2 +1,2 @@
 #!/bin/bash
-export MAVEN_OPTS="-Xmx$1 -XX:MaxPermSize=$2"
+export MAVEN_OPTS="-Xmx$1"
