@@ -2,7 +2,7 @@
 
 cd "$( cd "$( dirname "$0" )" && pwd )/.."
 
-export MAVEN_OPTS="-XX:MaxPermSize=128M"
+export MAVEN_OPTS="-Xmx2G"
 
 ./scripts/build-artifacts.sh
 
